--- a/index.html
+++ b/index.html
@@ -2,14 +2,23 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>site man</title>
+	<title>12125</title>
 </head>
 <body>
-	
-<h1>من تو را دوست دارم </h1>
 <br>
-<hr>
-<p>my sister </p>
+<h1>salam koni</h1>	
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
